<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="java.util.Calendar" />
        <import type="android.view.View"/>

        <variable
            name="model"
            type="com.hfad.agendax.ui.home.HomeViewModel" />
        <variable
            name="itemsSelectionSize"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/calendar_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:paddingBottom="7dp"
            android:background="@drawable/calendar_area_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <ImageButton
                android:id="@+id/settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setting_icon"
                android:padding="15dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/month_text"
                app:layout_constraintBottom_toBottomOf="@id/month_text"

                />

            <View
                android:id="@+id/date_selector_wrapper"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/settings_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/month_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@{model.currentMonth + `, ` + model.currentYear}"
                android:textColor="@android:color/black"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/white"
                android:clickable="true"
                android:visibility="@{itemsSelectionSize > 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toTopOf="@id/weeks_view"
                android:focusable="true">

                <ImageButton
                    android:id="@+id/close_selection_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/close_icon"
                    android:background="@null"
                    app:tint="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{itemsSelectionSize + ` items selected`}"
                    android:textColor="@color/color_primary"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/delete_selection_btn"
                    app:layout_constraintStart_toEndOf="@+id/close_selection_btn"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/delete_selection_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/delete_icon"
                    android:background="@null"
                    app:tint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weeks_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/month_text" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tasks_list"
            app:layout_constraintEnd_toEndOf="@+id/tasks_list"
            app:layout_constraintStart_toStartOf="@+id/tasks_list"
            app:layout_constraintTop_toBottomOf="@+id/calendar_area" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasks_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingBottom="200dp"
            android:clipToPadding="false"
            android:background="@color/task_list_background"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendar_area" />


        <TextView
            android:id="@+id/current_date_finder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H, 1:1"
            android:layout_marginBottom="10dp"
            android:alpha="0"
            android:text="@{model.currentDate.get(Calendar.DATE) + ``}"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@drawable/current_date_finder"
            app:layout_constraintBottom_toTopOf="@id/new_task_button"
            app:layout_constraintEnd_toEndOf="@id/new_task_button"
            app:layout_constraintStart_toStartOf="@id/new_task_button" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/new_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_icon"
            app:tint="@color/white"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
