<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    
    <data>
        <variable
            name="model"
            type="com.hfad.agendax.ui.newtask.NewTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/adView"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <EditText
                android:id="@+id/task_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginHorizontal="12dp"
                android:hint="Add Title"
                android:textColor="@color/black"
                android:text="@={model.title}"
                android:textSize="25sp"
                android:maxLines="1"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <LinearLayout
                android:id="@+id/date_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/task_option_padding"
                android:paddingHorizontal="17dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@id/task_title"
                app:layout_constraintStart_toStartOf="parent"
                >

                <TextView
                    android:id="@+id/date_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Date"
                    android:layout_weight="2"
                    style="@style/Label"
                    />

                <TextView
                    android:id="@+id/date_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:datePick="@{model.calendar}"
                    android:gravity="end"
                    android:textSize="17sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/time_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:paddingVertical="@dimen/task_option_padding"
                android:paddingHorizontal="17dp"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@id/date_setting"
                app:layout_constraintStart_toStartOf="parent"
                >

                <TextView
                    android:id="@+id/time_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Time"
                    android:layout_weight="2"
                    style="@style/Label"
                    />

                <TextView
                    android:id="@+id/time_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:timePick="@{model.calendar}"
                    app:set24Hour="@{model.timeFormat24}"
                    android:gravity="end"
                    android:textSize="17sp"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/notification_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/task_option_padding"
                android:paddingHorizontal="17dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/time_setting"
                app:layout_constraintStart_toStartOf="parent"
                >

                <TextView
                    android:id="@+id/notification_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Notification"
                    android:layout_weight="2"
                    style="@style/Label"
                    />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/notification_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={model.notification}"
                    android:gravity="end"
                    />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_description"
                style="@style/OutlinedInputBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="17dp"
                android:layout_marginTop="7dp"
                android:hint="Add Task Detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notification_setting">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_description_inptBx"
                    android:text="@={model.details}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-6217843088591566/2201826231"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>