<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/task_delete"
        android:icon="@drawable/delete_icon"
        android:title="Delete Task"
        app:showAsAction="always"

        />

    <item
        android:id="@+id/task_edit"
        android:icon="@drawable/edit_icon"
        android:title="Edit Task"
        app:showAsAction="always"
        />
</menu>